# urbaner

./: CLAUDE.md  README.md  URBANER_STP_Persona_Marketing.md  URBANER_儀表板完整內容.md  _asin_verification.csv  _check_levels.py  _doc_content.txt  _verify_own_asins.py  analyze.py  build_dual_market_report.py  build_review_foundation.py  card_choice_prob.py  card_mnl_market.py  conjoint_analysis.py  dashboard.py  data_gaps.md  data_overview.md  export_to_word.py  extended_analysis.py  generate_bmc_swot_ppt.py  generate_charts.py  generate_formal_report.py  generate_marketing_slides.py  generate_mmr.py  generate_positioning_fix_ppt.py  generate_postal_product_summary.py  generate_product_cards.py  generate_report.py  main.py  market_stp.py  md_to_pdf.py  orthogonal_design.py  pyproject.toml  requirements.txt  review_attribute_dashboard.html  review_attribute_readable.xlsx  review_attribute_scores.xlsx  review_attribute_summary.md  run_choice_logit.py  run_stp_analysis.py  (+12 more)
.claude/: launch.json  settings.json  settings.local.json
.streamlit/: config.toml
marketing_copy/: README.md  common_01_ipx7.md  common_02_bundle.md  common_03_hero_sku.md  jp_01_spec_numbers.md  jp_02_authority.md  jp_03_dual_battery.md  jp_04_fathers_day.md  us_01_gift_ready.md  us_02_bundle_sku.md  us_03_usbc_ipx7.md  us_04_japanese_craft.md
output/: URBANER_BMC_SWOT.pptx  URBANER_Positioning_修正_P12_P15.pptx  URBANER_研究報告.docx  URBANER_行銷問題回答.pptx  Urbaner_Amazon_Analysis_Report.docx  ~$baner_Amazon_Analysis_Report.docx
output_conjoint/: URBANER_Conjoint_完整報告.docx  URBANER_conjoint_完整分析報告.docx  (+23 more)
(+466 files in other folders)
