[project]
name = "urbaner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "docx2pdf>=0.1.8",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "python-docx>=1.2.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
]
